New version: download data as csv from google drive, and expect it to be melted

--- a/swords.ipynb
+++ b/swords.ipynb
@@ -8,8 +8,11 @@
    },
    "outputs": [],
    "source": [
+    "from io import BytesIO\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import requests\n",
     "\n",
     "from bokeh.plotting import figure, show, output_notebook\n",
     "from bokeh.palettes import Spectral11\n",
@@ -25,13 +28,19 @@
    },
    "outputs": [],
    "source": [
-    "def graph_swords(data, swords, kind='area'):\n",
+    "def graph_swords(swords, only=None):\n",
+    "    \"\"\"Graph the swords measurements as lines.\"\"\"\n",
     "    f = figure(width=900, y_range=(0, 2000))\n",
     "    \n",
-    "    for i, sword in enumerate(swords):\n",
-    "        sword_data = data[sword].dropna()\n",
-    "        f.line(sword_data.index, \n",
-    "               sword_data.values, \n",
+    "    if only:\n",
+    "        swords_to_graph = only\n",
+    "    else:\n",
+    "        swords_to_graph = swords.sword.unique()\n",
+    "        \n",
+    "    for i, sword in enumerate(swords_to_graph):\n",
+    "        sword_data = swords[swords.sword == sword]\n",
+    "        f.line(sword_data.cm.values, \n",
+    "               sword_data.g.values, \n",
     "               legend=sword, \n",
     "               line_color=Spectral11[i],\n",
     "               line_width=5)\n",
@@ -42,15 +51,23 @@
     "    show(f)    \n",
     "\n",
     "    \n",
-    "def parse_data(raw_data):\n",
-    "    reference = [[0, 0], [140, 0]]\n",
-    "    swords_data = pd.DataFrame(reference, columns=['cm', 'g']).set_index('cm')\n",
+    "def download_data(spreadsheet_url):\n",
+    "    \"\"\"\n",
+    "    Download the spreadsheet with the swords data, and convert it to a dataframe.\n",
     "    \n",
-    "    for sword_name, measures in raw_data.items():\n",
-    "        current_sword_data = pd.DataFrame(measures, columns=['cm', sword_name]).set_index('cm')\n",
-    "        swords_data = pd.merge(swords_data, current_sword_data, how='outer', left_index=True, right_index=True)\n",
+    "    The spreadsheet should have the following columns:\n",
+    "        sword_name: the name of the measured sword for the current row\n",
+    "        cm: the position of the measurement, as cm from the pommel\n",
+    "        g: the weight of the sword at that position\n",
+    "        notes: is that point special?\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    response = requests.get(spreadsheet_url)\n",
+    "    assert response.status_code == 200, 'Unable to download swords data'\n",
     "\n",
-    "    return swords_data"
+    "    data = pd.read_csv(BytesIO(response.content))\n",
+    "\n",
+    "    return data"
    ]
   },
   {
@@ -61,126 +78,7 @@
    },
    "outputs": [],
    "source": [
-    "raw_data = {\n",
-    "    'longsword_ram_fisa': [\n",
-    "        (0, 713),  # Pomo\n",
-    "        (10, 779),\n",
-    "        (20, 865),\n",
-    "        (30, 962),\n",
-    "        (40, 1085),  # CoB\n",
-    "        (50, 853),\n",
-    "        (60, 702),\n",
-    "        (70, 602),\n",
-    "        (80, 522),\n",
-    "        (90, 467),\n",
-    "        (100, 423),\n",
-    "        (110, 383),\n",
-    "        (117, 358),  # Punta\n",
-    "    ],\n",
-    "    'longsword_em_fisa': [\n",
-    "        (0, 1048),  # Pomo\n",
-    "        (10, 1139),\n",
-    "        (20, 1258),\n",
-    "        (30, 1381),\n",
-    "        (40, 1581),\n",
-    "        (50, 1789),\n",
-    "        (53, 1864),  # CoB\n",
-    "        (60, 1632),\n",
-    "        (70, 1382),\n",
-    "        (80, 1194),\n",
-    "        (90, 1063),\n",
-    "        (100, 968),\n",
-    "        (110, 869),\n",
-    "        (120, 796),\n",
-    "        (126, 761),  # Punta\n",
-    "    ],\n",
-    "    'katana_dan': [\n",
-    "        (0, 580),  # Pomo\n",
-    "        (10, 643),\n",
-    "        (20, 722),\n",
-    "        (30, 805),  # Casi guarda\n",
-    "        (40, 928),\n",
-    "        (44, 1004),  # CoB\n",
-    "        (50, 877),\n",
-    "        (60, 724),\n",
-    "        (70, 615),\n",
-    "        (80, 545),  # CoP\n",
-    "        (90, 472),\n",
-    "        (100, 434),  # Punta\n",
-    "    ],\n",
-    "    'ropera_dan': [\n",
-    "        (0, 606),  # Pomo\n",
-    "        (10, 654),\n",
-    "        (20, 736),\n",
-    "        (22, 767),  # CoB\n",
-    "        (30, 602),\n",
-    "        (40, 463),\n",
-    "        (50, 370),\n",
-    "        (60, 310),\n",
-    "        (70, 262),\n",
-    "        (80, 225),\n",
-    "        (90, 201),\n",
-    "        (100, 180),\n",
-    "        (102, 177),  # Punta\n",
-    "    ],\n",
-    "    'gallito_dan': [\n",
-    "        (0, 484),  # Pomo\n",
-    "        (6, 515),\n",
-    "        (16, 601),\n",
-    "        (22, 666),  # CoB\n",
-    "        (26, 574),\n",
-    "        (36, 405),\n",
-    "        (46, 316),\n",
-    "        (56, 260),\n",
-    "        (66, 220),\n",
-    "        (76, 195),  # Punta\n",
-    "    ],\n",
-    "    'palo_escoba_dan': [\n",
-    "        (0, 232),\n",
-    "        (10, 250),\n",
-    "        (20, 277),\n",
-    "        (30, 308),\n",
-    "        (40, 347),\n",
-    "        (50, 398),\n",
-    "        (60, 455),\n",
-    "        (70, 389),\n",
-    "        (80, 338),\n",
-    "        (90, 299),\n",
-    "        (100, 272),\n",
-    "        (110, 245),\n",
-    "        (119, 227),\n",
-    "    ],\n",
-    "    'sable_1895_dan': [\n",
-    "        (0, 732),\n",
-    "        (10, 805),\n",
-    "        (20, 951),\n",
-    "        (27, 1003),\n",
-    "        (30, 903),\n",
-    "        (40, 679),\n",
-    "        (50, 542),\n",
-    "        (60, 451),\n",
-    "        (70, 387),\n",
-    "        (80, 336),\n",
-    "        (90, 300),\n",
-    "        (97.5, 261),\n",
-    "    ],\n",
-    "    'sable_1898_dan': [\n",
-    "        (0, 733),\n",
-    "        (10, 790),\n",
-    "        (20, 897),\n",
-    "        (29.5, 1012),\n",
-    "        (30, 985),\n",
-    "        (40, 740),\n",
-    "        (50, 602),\n",
-    "        (60, 495),\n",
-    "        (70, 403),\n",
-    "        (80, 350),\n",
-    "        (90, 311),\n",
-    "        (100, 294),\n",
-    "        (102, 290),\n",
-    "    ],\n",
-    "}\n",
-    "data = parse_data(raw_data)"
+    "swords = download_data('http://goo.gl/wbJNoa')"
    ]
   },
   {
@@ -191,17 +89,8 @@
    },
    "outputs": [],
    "source": [
-    "graph_swords(data, raw_data.keys())"
+    "graph_swords(swords)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
