Added title to the graph

--- a/swords.ipynb
+++ b/swords.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "def graph_swords(swords, only=None):\n",
     "    \"\"\"Graph the swords measurements as lines.\"\"\"\n",
-    "    f = figure(width=900, y_range=(0, 2000))\n",
+    "    f = figure(title='Effective mass', width=900, y_range=(0, 2000))\n",
     "    \n",
     "    if only:\n",
     "        swords_to_graph = only\n",
