Palette can now support many more swords

--- a/swords.ipynb
+++ b/swords.ipynb
@@ -15,7 +15,7 @@
     "import requests\n",
     "\n",
     "from bokeh.plotting import figure, show, output_notebook\n",
-    "from bokeh.palettes import Spectral11\n",
+    "from bokeh.palettes import viridis\n",
     "\n",
     "output_notebook()"
    ]
@@ -37,12 +37,14 @@
     "    else:\n",
     "        swords_to_graph = swords.sword.unique()\n",
     "        \n",
+    "    palette = viridis(len(swords_to_graph))\n",
+    "        \n",
     "    for i, sword in enumerate(swords_to_graph):\n",
     "        sword_data = swords[swords.sword == sword]\n",
     "        f.line(sword_data.cm.values, \n",
     "               sword_data.g.values, \n",
     "               legend=sword, \n",
-    "               line_color=Spectral11[i],\n",
+    "               line_color=palette[i],\n",
     "               line_width=5)\n",
     "        \n",
     "    f.xaxis.axis_label = 'cm'\n",
