Added poi in graphs

--- a/swords.ipynb
+++ b/swords.ipynb
@@ -45,7 +45,14 @@
     "               sword_data.g.values, \n",
     "               legend=sword, \n",
     "               line_color=palette[i],\n",
-    "               line_width=5)\n",
+    "               line_width=4)\n",
+    "        \n",
+    "        sword_poi = sword_data.dropna()\n",
+    "        f.circle(sword_poi.cm.values, \n",
+    "                 sword_poi.g.values, \n",
+    "                 legend=None,\n",
+    "                 color=palette[i],\n",
+    "                 size=7)\n",
     "        \n",
     "    f.xaxis.axis_label = 'cm'\n",
     "    f.yaxis.axis_label = 'g'\n",
