Ability to show labels on each point of interest

--- a/swords.ipynb
+++ b/swords.ipynb
@@ -16,6 +16,7 @@
     "\n",
     "from bokeh.plotting import figure, show, output_notebook\n",
     "from bokeh.palettes import viridis\n",
+    "from bokeh.models import LabelSet, ColumnDataSource\n",
     "\n",
     "output_notebook()"
    ]
@@ -28,7 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "def graph_swords(swords, only=None):\n",
+    "def graph_swords(swords, only=None, show_labels=False):\n",
     "    \"\"\"Graph the swords measurements as lines.\"\"\"\n",
     "    f = figure(title='Effective mass', width=900, y_range=(0, 2000))\n",
     "    \n",
@@ -53,6 +54,13 @@
     "                 legend=None,\n",
     "                 color=palette[i],\n",
     "                 size=7)\n",
+    "        \n",
+    "        if show_labels:\n",
+    "            source = ColumnDataSource(data=sword_poi)\n",
+    "            labels = LabelSet(source=source, \n",
+    "                              x='cm', y='g', text='notes',\n",
+    "                              x_offset=5, y_offset=5)\n",
+    "            f.add_layout(labels)\n",
     "        \n",
     "    f.xaxis.axis_label = 'cm'\n",
     "    f.yaxis.axis_label = 'g'\n",
@@ -99,6 +107,17 @@
    "outputs": [],
    "source": [
     "graph_swords(swords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "graph_swords(swords, only=['katana_dan'], show_labels=True)"
    ]
   }
  ],
