Reordering and separated cells of independent stuff

--- a/swords.ipynb
+++ b/swords.ipynb
@@ -25,6 +25,44 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def download_data(spreadsheet_url):\n",
+    "    \"\"\"\n",
+    "    Download the spreadsheet with the swords data, and convert it to a dataframe.\n",
+    "    \n",
+    "    The spreadsheet should have the following columns:\n",
+    "        sword_name: the name of the measured sword for the current row\n",
+    "        cm: the position of the measurement, as cm from the pommel\n",
+    "        g: the weight of the sword at that position\n",
+    "        notes: is that point special?\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    response = requests.get(spreadsheet_url)\n",
+    "    assert response.status_code == 200, 'Unable to download swords data'\n",
+    "\n",
+    "    data = pd.read_csv(BytesIO(response.content))\n",
+    "\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "swords = download_data('http://goo.gl/wbJNoa')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
@@ -65,37 +103,7 @@
     "    f.xaxis.axis_label = 'cm'\n",
     "    f.yaxis.axis_label = 'g'\n",
     "    \n",
-    "    show(f)    \n",
-    "\n",
-    "    \n",
-    "def download_data(spreadsheet_url):\n",
-    "    \"\"\"\n",
-    "    Download the spreadsheet with the swords data, and convert it to a dataframe.\n",
-    "    \n",
-    "    The spreadsheet should have the following columns:\n",
-    "        sword_name: the name of the measured sword for the current row\n",
-    "        cm: the position of the measurement, as cm from the pommel\n",
-    "        g: the weight of the sword at that position\n",
-    "        notes: is that point special?\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    response = requests.get(spreadsheet_url)\n",
-    "    assert response.status_code == 200, 'Unable to download swords data'\n",
-    "\n",
-    "    data = pd.read_csv(BytesIO(response.content))\n",
-    "\n",
-    "    return data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "swords = download_data('http://goo.gl/wbJNoa')"
+    "    show(f)    "
    ]
   },
   {
