Better colors, and changed the shape in the legend

--- a/swords.ipynb
+++ b/swords.ipynb
@@ -15,7 +15,7 @@
     "import requests\n",
     "\n",
     "from bokeh.plotting import figure, show, output_notebook\n",
-    "from bokeh.palettes import viridis\n",
+    "from bokeh.palettes import viridis, Spectral10, Paired10, Set1_9, Set3_12, Dark2_8, Accent8\n",
     "from bokeh.models import LabelSet, ColumnDataSource\n",
     "\n",
     "output_notebook()"
@@ -76,20 +76,21 @@
     "    else:\n",
     "        swords_to_graph = swords.sword.unique()\n",
     "        \n",
-    "    palette = viridis(len(swords_to_graph))\n",
+    "    #palette = viridis(len(swords_to_graph))\n",
+    "    palette = Set1_9 + Dark2_8 + Accent8\n",
     "        \n",
     "    for i, sword in enumerate(swords_to_graph):\n",
     "        sword_data = swords[swords.sword == sword]\n",
     "        f.line(sword_data.cm.values, \n",
     "               sword_data.g.values, \n",
-    "               legend=sword, \n",
+    "               legend=None, \n",
     "               line_color=palette[i],\n",
     "               line_width=1)\n",
     "        \n",
     "        sword_poi = sword_data.dropna()\n",
     "        f.circle(sword_poi.cm.values, \n",
     "                 sword_poi.g.values, \n",
-    "                 legend=None,\n",
+    "                 legend=sword,\n",
     "                 color=palette[i],\n",
     "                 size=7)\n",
     "        \n",
