Added real, correct analysis + graph code of effective mass

--- a/swords.ipynb
+++ b/swords.ipynb
@@ -128,6 +128,65 @@
    "source": [
     "graph_swords(swords, only=['katana_dan'], show_labels=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def calculate_curve(pob, length, weight, example_pivot, example_impact):\n",
+    "    l1 = abs(example_impact - pob)\n",
+    "    l2 = abs(pob - example_pivot)\n",
+    "    rectangle_area = l1 * l2\n",
+    "    \n",
+    "    def pivot_for_impact(impact):\n",
+    "        l1 = abs(impact - pob)\n",
+    "        l2 = rectangle_area / l1\n",
+    "        pivot = pob - l2\n",
+    "        return pivot\n",
+    "    \n",
+    "    def inertia_at_point(impact, pivot):\n",
+    "        pob_to_pivot = abs(pivot - pob)\n",
+    "        pob_to_impact = abs(pob - impact)\n",
+    "        # to half the perimeter of our rectangle, which is just the length of the moment arm of the lever. \n",
+    "        return weight * (pob_to_pivot / (pob_to_pivot + pob_to_impact))\n",
+    "    \n",
+    "    points = pd.DataFrame()\n",
+    "    points['cm'] = [x for x in range(length + 1) if x != pob]\n",
+    "    points['g'] = points['cm'].apply(lambda cm: inertia_at_point(cm, pivot_for_impact(cm)))\n",
+    "\n",
+    "    f = figure(title='Effective mass', width=900, y_range=(0, 2000))    \n",
+    "\n",
+    "    f.line(points.cm.values, \n",
+    "           points.g.values, \n",
+    "           line_width=4)\n",
+    "        \n",
+    "    f.xaxis.axis_label = 'cm'\n",
+    "    f.yaxis.axis_label = 'g'\n",
+    "    \n",
+    "    show(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# longsword_ram_fisa\n",
+    "calculate_curve(\n",
+    "    pob=39,\n",
+    "    length=117,\n",
+    "    weight=1085,\n",
+    "    example_pivot=24,  # guard\n",
+    "    example_impact=84.5,  # impact for guard pivot\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
