Removed wrong graphs and code, polished real inertia graph, added poi data to new graph

--- a/swords.ipynb
+++ b/swords.ipynb
@@ -29,23 +29,26 @@
    },
    "outputs": [],
    "source": [
-    "def download_data(spreadsheet_url):\n",
-    "    \"\"\"\n",
-    "    Download the spreadsheet with the swords data, and convert it to a dataframe.\n",
-    "    \n",
-    "    The spreadsheet should have the following columns:\n",
-    "        sword_name: the name of the measured sword for the current row\n",
-    "        cm: the position of the measurement, as cm from the pommel\n",
-    "        g: the weight of the sword at that position\n",
-    "        notes: is that point special?\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    response = requests.get(spreadsheet_url)\n",
-    "    assert response.status_code == 200, 'Unable to download swords data'\n",
+    "def download_csv(csv_url):\n",
+    "    response = requests.get(csv_url)\n",
+    "    assert response.status_code == 200, 'Unable to download csv ' + csv_url\n",
+    "    return pd.read_csv(BytesIO(response.content)).dropna()\n",
     "\n",
-    "    data = pd.read_csv(BytesIO(response.content))\n",
+    "# swords csv:\n",
+    "#     sword: the name of the sword\n",
+    "#     weight: total weight of the sword\n",
+    "#     length: total length of the sword\n",
+    "#     balance: distance from the pommel to the balance point\n",
+    "#     pivot: distance from the pommel to the example pivot point\n",
+    "#     impact: distance from the pommel to the example impact point\n",
     "\n",
-    "    return data"
+    "# poi csv:\n",
+    "#     sword: the name of the sword\n",
+    "#     cm: distance from the pommel to the point of interest\n",
+    "#     label: the label of the point of interest\n",
+    "\n",
+    "swords = download_csv('http://goo.gl/tqDCX0').set_index('sword')\n",
+    "poi = download_csv('http://goo.gl/wbJNoa')"
    ]
   },
   {
@@ -56,7 +59,7 @@
    },
    "outputs": [],
    "source": [
-    "swords = download_data('http://goo.gl/wbJNoa')"
+    "swords"
    ]
   },
   {
@@ -67,103 +70,79 @@
    },
    "outputs": [],
    "source": [
-    "def graph_swords(swords, only=None, show_labels=False):\n",
-    "    \"\"\"Graph the swords measurements as lines.\"\"\"\n",
-    "    f = figure(title='Effective mass', width=900, y_range=(0, 2000))\n",
-    "    \n",
+    "poi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def graph_curves(only=None, show_labels=False):\n",
     "    if only:\n",
     "        swords_to_graph = only\n",
     "    else:\n",
-    "        swords_to_graph = swords.sword.unique()\n",
-    "        \n",
-    "    #palette = viridis(len(swords_to_graph))\n",
+    "        swords_to_graph = swords.index.values\n",
+    "    \n",
     "    palette = Set1_9 + Dark2_8 + Accent8\n",
+    "    \n",
+    "    f = figure(title='Effective mass', width=900, y_range=(0, 2000))\n",
+    "    \n",
+    "    for i, sword_name in enumerate(swords_to_graph):\n",
+    "        sword = swords.ix[sword_name]\n",
     "        \n",
-    "    for i, sword in enumerate(swords_to_graph):\n",
-    "        sword_data = swords[swords.sword == sword]\n",
-    "        f.line(sword_data.cm.values, \n",
-    "               sword_data.g.values, \n",
-    "               legend=None, \n",
-    "               line_color=palette[i],\n",
-    "               line_width=1)\n",
+    "        l1 = abs(sword.impact - sword.balance)\n",
+    "        l2 = abs(sword.pivot - sword.balance)\n",
+    "        rectangle_area = l1 * l2\n",
+    "\n",
+    "        def pivot_for_impact(impact):\n",
+    "            l1 = abs(impact - sword.balance)\n",
+    "            l2 = rectangle_area / l1\n",
+    "            pivot = sword.balance - l2\n",
+    "            return pivot\n",
+    "\n",
+    "        def inertia_at_point(cm):\n",
+    "            impact = cm\n",
+    "            pivot = pivot_for_impact(impact)\n",
+    "            balance_to_impact = abs(impact - sword.balance)\n",
+    "            balance_to_pivot = abs(pivot - sword.balance)\n",
+    "\n",
+    "            # to half the perimeter of our rectangle, which is just the length of the moment arm of the lever. \n",
+    "            return sword.weight * (balance_to_pivot / (balance_to_pivot + balance_to_impact))\n",
+    "\n",
+    "        points = pd.DataFrame()\n",
+    "        points['cm'] = [x for x in range(int(sword.length) + 1) if x != sword.balance]\n",
+    "        # TODO fix range int\n",
+    "        points['g'] = points['cm'].apply(inertia_at_point)\n",
     "        \n",
-    "        sword_poi = sword_data.dropna()\n",
+    "        f.line(\n",
+    "            points.cm.values, \n",
+    "            points.g.values, \n",
+    "            legend=None,\n",
+    "            line_width=1,\n",
+    "            line_color=palette[i],\n",
+    "        )\n",
+    "        \n",
+    "        sword_poi = poi[poi.sword == sword_name].copy()\n",
+    "        sword_poi['g'] = sword_poi['cm'].apply(inertia_at_point)\n",
+    "        \n",
     "        f.circle(sword_poi.cm.values, \n",
     "                 sword_poi.g.values, \n",
-    "                 legend=sword,\n",
+    "                 legend=sword_name,\n",
     "                 color=palette[i],\n",
     "                 size=7)\n",
     "        \n",
     "        if show_labels:\n",
     "            source = ColumnDataSource(data=sword_poi)\n",
     "            labels = LabelSet(source=source, \n",
-    "                              x='cm', y='g', text='notes',\n",
+    "                              x='cm', y='g', text='label',\n",
     "                              x_offset=5, y_offset=5)\n",
     "            f.add_layout(labels)\n",
     "        \n",
-    "    f.xaxis.axis_label = 'cm'\n",
-    "    f.yaxis.axis_label = 'g'\n",
-    "    \n",
-    "    show(f)    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "graph_swords(swords)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "graph_swords(swords, only=['katana_dan'], show_labels=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def calculate_curve(pob, length, weight, example_pivot, example_impact):\n",
-    "    l1 = abs(example_impact - pob)\n",
-    "    l2 = abs(pob - example_pivot)\n",
-    "    rectangle_area = l1 * l2\n",
-    "    \n",
-    "    def pivot_for_impact(impact):\n",
-    "        l1 = abs(impact - pob)\n",
-    "        l2 = rectangle_area / l1\n",
-    "        pivot = pob - l2\n",
-    "        return pivot\n",
-    "    \n",
-    "    def inertia_at_point(impact, pivot):\n",
-    "        pob_to_pivot = abs(pivot - pob)\n",
-    "        pob_to_impact = abs(pob - impact)\n",
-    "        # to half the perimeter of our rectangle, which is just the length of the moment arm of the lever. \n",
-    "        return weight * (pob_to_pivot / (pob_to_pivot + pob_to_impact))\n",
-    "    \n",
-    "    points = pd.DataFrame()\n",
-    "    points['cm'] = [x for x in range(length + 1) if x != pob]\n",
-    "    points['g'] = points['cm'].apply(lambda cm: inertia_at_point(cm, pivot_for_impact(cm)))\n",
     "\n",
-    "    f = figure(title='Effective mass', width=900, y_range=(0, 2000))    \n",
-    "\n",
-    "    f.line(points.cm.values, \n",
-    "           points.g.values, \n",
-    "           line_width=4)\n",
-    "        \n",
     "    f.xaxis.axis_label = 'cm'\n",
     "    f.yaxis.axis_label = 'g'\n",
     "    \n",
@@ -178,14 +157,7 @@
    },
    "outputs": [],
    "source": [
-    "# longsword_ram_fisa\n",
-    "calculate_curve(\n",
-    "    pob=39,\n",
-    "    length=117,\n",
-    "    weight=1085,\n",
-    "    example_pivot=24,  # guard\n",
-    "    example_impact=84.5,  # impact for guard pivot\n",
-    ")"
+    "graph_curves(show_labels=True)"
    ]
   }
  ],
