--- a/swords.ipynb
+++ b/swords.ipynb
@@ -114,7 +114,8 @@
     "            return sword.weight * (balance_to_pivot / (balance_to_pivot + balance_to_impact))\n",
     "\n",
     "        points = pd.DataFrame()\n",
-    "        points['cm'] = [x for x in range(int(sword.length) + 1) if x != sword.balance]\n",
+    "        points['cm'] = [x for x in range(int(sword.length) + 1) \n",
+    "                        if x != sword.balance]\n",
     "        # TODO fix range int\n",
     "        points['g'] = points['cm'].apply(inertia_at_point)\n",
     "        \n",
@@ -129,17 +130,24 @@
     "        sword_poi = poi[poi.sword == sword_name].copy()\n",
     "        sword_poi['g'] = sword_poi['cm'].apply(inertia_at_point)\n",
     "        \n",
-    "        f.circle(sword_poi.cm.values, \n",
-    "                 sword_poi.g.values, \n",
-    "                 legend=sword_name,\n",
-    "                 color=palette[i],\n",
-    "                 size=7)\n",
+    "        f.circle(\n",
+    "            sword_poi.cm.values, \n",
+    "            sword_poi.g.values, \n",
+    "            legend=sword_name,\n",
+    "            color=palette[i],\n",
+    "            size=7,\n",
+    "        )\n",
     "        \n",
     "        if show_labels:\n",
     "            source = ColumnDataSource(data=sword_poi)\n",
-    "            labels = LabelSet(source=source, \n",
-    "                              x='cm', y='g', text='label',\n",
-    "                              x_offset=5, y_offset=5)\n",
+    "            labels = LabelSet(\n",
+    "                source=source, \n",
+    "                x='cm', \n",
+    "                y='g', \n",
+    "                text='label',\n",
+    "                x_offset=5, \n",
+    "                y_offset=5,\n",
+    "            )\n",
     "            f.add_layout(labels)\n",
     "        \n",
     "\n",
@@ -157,7 +165,7 @@
    },
    "outputs": [],
    "source": [
-    "graph_curves(show_labels=True)"
+    "graph_curves()"
    ]
   }
  ],
