Dont use the new notes column, and fixes related to that and nans

--- a/swords.ipynb
+++ b/swords.ipynb
@@ -32,7 +32,7 @@
     "def download_csv(csv_url):\n",
     "    response = requests.get(csv_url)\n",
     "    assert response.status_code == 200, 'Unable to download csv ' + csv_url\n",
-    "    return pd.read_csv(BytesIO(response.content)).dropna()\n",
+    "    return pd.read_csv(BytesIO(response.content))\n",
     "\n",
     "# swords csv:\n",
     "#     sword: the name of the sword\n",
@@ -47,8 +47,8 @@
     "#     cm: distance from the pommel to the point of interest\n",
     "#     label: the label of the point of interest\n",
     "\n",
-    "swords = download_csv('http://goo.gl/tqDCX0').set_index('sword')\n",
-    "poi = download_csv('http://goo.gl/wbJNoa')"
+    "swords = download_csv('http://goo.gl/tqDCX0').drop('notes', axis=1).dropna().set_index('sword')\n",
+    "poi = download_csv('http://goo.gl/wbJNoa').dropna()"
    ]
   },
   {
@@ -167,6 +167,15 @@
    "source": [
     "graph_curves()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
