Added some subset graphs

--- a/swords.ipynb
+++ b/swords.ipynb
@@ -172,6 +172,100 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# sabers\n",
+    "graph_curves([\n",
+    "    'saber_1898_dan', \n",
+    "    'saber_1895_dan',\n",
+    "    '1870_dan',\n",
+    "    '1920_dan',\n",
+    "    '1890_dan',\n",
+    "    'artillery_1898_dan',\n",
+    "    'katana_dan',\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# heaviers\n",
+    "graph_curves([\n",
+    "    'longsword_ram_fisa',\n",
+    "    'schiavona_dan',\n",
+    "    'longsword_em_fisa',\n",
+    "    'katana_dan',\n",
+    "    'waster_1h_fisa',\n",
+    "    'artillery_1898_dan',\n",
+    "    'machete_1898_dan',\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# quick\n",
+    "graph_curves([\n",
+    "    'ropera_dan',\n",
+    "    '1870_dan',\n",
+    "    '1890_dan',\n",
+    "    'spadroon_dan',\n",
+    "    'gallito1_dan',\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# gallitos\n",
+    "graph_curves([\n",
+    "    'gallito2_dan', \n",
+    "    'gallito1_dan',\n",
+    "    'pseudogallito_dan',\n",
+    "    'machete_1898_dan',\n",
+    "    'facon_50cm_dan',\n",
+    "    'facon_40cm_dan',\n",
+    "    'bayonet_1891_dan',\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# 1895\n",
+    "graph_curves([\n",
+    "    'saber_1895_dan',\n",
+    "    '1898_1895_dan',\n",
+    "    '1829_1895_dan',\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
